k8s/myapp/middleware-sslheader.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: myapp-sslheader
  namespace: myapp
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
