k8s/myapp/03-deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          args:
            - "--default-authentication-plugin=mysql_native_password"
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
          ports:
            - containerPort: 3306
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
