k8s/myapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: myapp
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
        component: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:php8.4-apache
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
#          readinessProbe:
#            httpGet:
#              path: /
#              port: 80
#            initialDelaySeconds: 5
#            periodSeconds: 10
#            timeoutSeconds: 5
#            failureThreshold: 6
#          livenessProbe:
#            httpGet:
#              path: /
#              port: 80
#            initialDelaySeconds: 30
#            periodSeconds: 30
#            timeoutSeconds: 5
#            failureThreshold: 3
