k8s/myapp/04-service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: myapp
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
