k8s/myapp/05-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: myapp
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls.domains.0.main: azure-terraform.ineen.net
    # @see k8s/myapp/middleware-sslheader.yaml
    traefik.ingress.kubernetes.io/router.middlewares: myapp-sslheader@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: azure-terraform.ineen.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 80
  tls:
    - hosts:
        - azure-terraform.ineen.net
